--- a/.github/workflows/auto-commit.yml
+++ b/.github/workflows/auto-commit.yml
@@ -22,7 +22,8 @@ jobs:
       - name: Find modified Java file
         id: java_file
         run: |
-          FILE=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep '\.java$' | head -n 1)
+          git fetch origin
+          FILE=$(git diff origin/HEAD --name-only | grep '\.java$' | head -n 1 || echo "")
           echo "file=$FILE" >> $GITHUB_OUTPUT
 
       - name: Extract info, compile, run, and commit
@@ -30,25 +31,26 @@ jobs:
           FILE=${{ steps.java_file.outputs.file }}
           echo "Java File: $FILE"
 
+          if [ -z "$FILE" ]; then
+            echo "No Java file to process."
+            exit 0
+          fi
+
           DIR=$(dirname "$FILE" | sed 's|algorithm/||')
           BASENAME=$(basename "$FILE" .java)
 
           ID=$(echo $BASENAME | grep -o 'BOJ[0-9]*' | sed 's/BOJ//')
           TITLE=$(echo $BASENAME | sed -E 's/.*BOJ[0-9]+_//;s/_/ /g')
 
-          # 라인 수 계산
           LINES=$(wc -l < "$FILE")
 
-          # 파일 컴파일
           javac "$FILE"
           CLASSNAME=$(basename "$FILE" .java)
           OUT=$(java -cp $(dirname "$FILE") "$CLASSNAME")
 
-          # 실행 시간 추출
           TIME_LINE=$(echo "$OUT" | grep 'TIME:')
           TIME_VAL=$(echo "$TIME_LINE" | grep -o '[0-9]* ms')
 
-          # 커밋 메시지
           MSG="✨ $DIR: BOJ$ID $TITLE\n📏 ${LINES} lines\n⏱️ $TIME_VAL"
           echo -e "$MSG"
 
